fixed skills title padding on tablet

--- a/src/elements/skills/skills.scss
+++ b/src/elements/skills/skills.scss
@@ -20,6 +20,7 @@
 
         @include tablet{
             width: 100%;
+            padding: 20px;
         }
 
         h1{
